--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
     font-family: sans-serif;
 }
 h1{
+    margin-top: 50px;
     color:rgb(0, 0, 126);
     text-align: center;
     font-size: 40px;
+    font-weight: 400;
 }
 body{
     position: relative;
